# cumt-jwxt-cli

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
src/cumt_jwxt_cli/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_config.py  models.py  output_naming.py  state.py  time_utils.py
src/cumt_jwxt_cli/app/: __init__.py  session.py
src/cumt_jwxt_cli/captcha/: __init__.py  openai_compatible.py
src/cumt_jwxt_cli/client/: __init__.py  auth.py  http.py
src/cumt_jwxt_cli/exams/: ics.py  parser.py  publication.py  query_fetch.py  query_state.py  report.py  service.py  snapshot.py
src/cumt_jwxt_cli/exams/templates/: __init__.py  email_report.html
src/cumt_jwxt_cli/grades/: __init__.py  parser.py  publication.py  query_fetch.py  query_state.py  report.py  service.py  snapshot.py
src/cumt_jwxt_cli/grades/templates/: __init__.py  email_report.html
src/cumt_jwxt_cli/notify/: email.py
tests/: test_auth.py  test_captcha_openai_compatible.py  test_cli.py  test_config.py  test_email.py  test_exams_ics.py  test_exams_parser.py  test_exams_publication.py  test_exams_query_fetch.py  test_exams_query_state.py  test_exams_report.py  test_exams_service.py  test_exams_snapshot.py  test_grades_service.py  test_http_client.py  test_logging_config.py  test_models.py  test_output_naming.py  test_parser.py  test_report.py  test_session_orchestrator.py  test_snapshot.py  test_state.py  test_time_utils.py
