[project]
name = "cumt-jwxt-cli"
version = "0.1.0"
description = "Command line tools for CUMT JWXT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "icalendar>=7.1.2",
    "jinja2>=3.1.6",
    "openai>=1.0.0",
    "socksio>=1.0.0",
]

[project.scripts]
cumt-jwxt = "cumt_jwxt_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
